HW-266: Fix vertical alignment space issue

--- a/sass/mosaico/_template-item.scss
+++ b/sass/mosaico/_template-item.scss
@@ -58,6 +58,10 @@
     float: none !important;
     margin-bottom: 7px;
     width: 100px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 
   .crm-mosaico-template-title-wrapper {
